--- a/.github/actions/check-merge-queue-changelogs/action.yml
+++ b/.github/actions/check-merge-queue-changelogs/action.yml
@@ -3,15 +3,10 @@ description: Check if the changelog was incorrectly merged in a merge queue
   pull request.
 
 inputs:
-  head-ref:
-    description: The head ref of the pull request.
-    required: true
-  base-ref:
-    description: The base ref to compare against.
-    required: true
   github-token:
     description: The GitHub token to use for authentication.
-    required: true
+    required: false
+    default: ${{ github.token }}
 
 runs:
   using: composite
@@ -25,7 +20,7 @@ runs:
       id: pr-number
       uses: actions/github-script@v8
       env:
-        HEAD_REF: ${{ inputs.head-ref }}
+        HEAD_REF: ${{ github.event.pull_request.head.ref || github.event.merge_group.head_ref }}
       with:
         github-token: ${{ inputs.github-token }}
         script: |
@@ -52,25 +47,37 @@ runs:
         PR_NUMBER: ${{ steps.pr-number.outputs.pr-number }}
         GH_TOKEN: ${{ inputs.github-token }}
       run: |
-        BRANCH=$(gh api "/repos/${REPOSITORY}/pulls/${PR_NUMBER} --jq=.head.ref")
+        BRANCH=$(gh api "/repos/${REPOSITORY}/pulls/${PR_NUMBER}" --jq=.head.ref)
         echo "pr-branch=$BRANCH" >> "$GITHUB_OUTPUT"
 
     - name: Check changelog changes
       id: changelog-check
       shell: bash
       env:
-        REF: ${{ inputs.ref }}
-        BASE_REF: ${{ inputs.base-ref }}
+        HEAD_REF: ${{ github.event.pull_request.head.ref || github.event.merge_group.head_ref }}
+        BASE_REF: ${{ github.event.pull_request.base.ref || github.event.merge_group.base_ref }}
         PR_BRANCH: ${{ steps.pr-branch.outputs.pr-branch }}
         REPOSITORY: ${{ github.repository }}
         ACTION_PATH: ${{ github.action_path }}
       run: |
         set -euo pipefail
 
-        UPDATED_CHANGELOGS=$(git diff --name-only origin/"$BASE_REF"...origin/"$PR_BRANCH" | grep -E 'CHANGELOG\.md$' || true)
+        # Strip invalid prefix from `BASE_REF`
+        # It comes prefixed with `refs/heads/`, but the branch is not checked out in this context
+        # We need to express it as a remote branch
+        PREFIXED_REF_REGEX='refs/heads/(.+)'
+        if [[ "$BASE_REF" =~ $PREFIXED_REF_REGEX ]]; then
+          BASE_REF="${BASH_REMATCH[1]}"
+        fi
+
+        TARGET_REF=$(git merge-base "origin/$BASE_REF" "origin/$PR_BRANCH")
+        git fetch origin "$TARGET_REF"
+
+        UPDATED_CHANGELOGS=$(git diff --name-only "$TARGET_REF" "origin/$PR_BRANCH" | grep -E 'CHANGELOG\.md$' || true)
         if [ -n "$UPDATED_CHANGELOGS" ]; then
           for FILE in $UPDATED_CHANGELOGS; do
-            git show origin/"$BASE_REF":"$FILE" > /tmp/base-changelog.md
+            echo "Checking changelog file: $FILE"
+            git show "$TARGET_REF":"$FILE" > /tmp/base-changelog.md
             git show origin/"$PR_BRANCH":"$FILE" > /tmp/pr-changelog.md
 
             node "${ACTION_PATH}/check-changelog-diff.cjs" \
