--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,11 +23,7 @@ jobs:
       - name: Check pull request merge queue status
         id: check-skip-merge-queue
         if: github.event_name == 'merge_group'
-        uses: ./.github/actions/check-merge-queue
-        with:
-          head-ref: ${{ github.event.merge_group.head_ref }}
-          base-ref: main
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+        uses: MetaMask/github-tools/.github/actions/check-skip-merge-queue@v1
 
   check-workflows:
     name: Check workflows
