--- a/packages/ramps-controller/tsconfig.build.json
+++ b/packages/ramps-controller/tsconfig.build.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "baseUrl": "./",
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "resolveJsonModule": true
   },
   "references": [
     {
