dirty: assets-controller

--- a/packages/assets-controllers/tsconfig.json
+++ b/packages/assets-controllers/tsconfig.json
@@ -13,6 +13,7 @@
     { "path": "../controller-utils" },
     { "path": "../keyring-controller" },
     { "path": "../network-controller" },
+    { "path": "../network-enablement-controller" },
     { "path": "../messenger" },
     { "path": "../preferences-controller" },
     { "path": "../phishing-controller" },
