--- a/packages/assets-controllers/package.json
+++ b/packages/assets-controllers/package.json
@@ -80,6 +80,7 @@
     "@metamask/snaps-utils": "^11.7.0",
     "@metamask/transaction-controller": "^62.9.2",
     "@metamask/utils": "^11.9.0",
+    "@tanstack/query-core": "^5.62.16",
     "@types/bn.js": "^5.1.5",
     "@types/uuid": "^8.3.0",
     "async-mutex": "^0.5.0",
