--- a/packages/core-backend/package.json
+++ b/packages/core-backend/package.json
@@ -54,6 +54,7 @@
     "@metamask/messenger": "^0.3.0",
     "@metamask/profile-sync-controller": "^27.0.0",
     "@metamask/utils": "^11.9.0",
+    "@tanstack/query-core": "^5.62.16",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
