--- a/packages/assets-controller/package.json
+++ b/packages/assets-controller/package.json
@@ -47,8 +47,15 @@
     "test:verbose": "NODE_OPTIONS=--experimental-vm-modules jest --verbose",
     "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch"
   },
+  "dependencies": {
+    "@metamask/base-controller": "^9.0.0"
+  },
+  "peerDependencies": {
+    "@metamask/messenger": "^0.3.0"
+  },
   "devDependencies": {
     "@metamask/auto-changelog": "^3.4.4",
+    "@metamask/messenger": "^0.3.0",
     "@ts-bridge/cli": "^0.6.4",
     "@types/jest": "^27.4.1",
     "deepmerge": "^4.2.2",
