--- a/packages/assets-controller/package.json
+++ b/packages/assets-controller/package.json
@@ -48,11 +48,11 @@
     "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --watch"
   },
   "dependencies": {
-    "@metamask/base-controller": "^9.0.0"
+    "@metamask/base-controller": "^9.0.0",
+    "@metamask/messenger": "^0.3.0"
   },
   "devDependencies": {
     "@metamask/auto-changelog": "^3.4.4",
-    "@metamask/messenger": "^0.3.0",
     "@ts-bridge/cli": "^0.6.4",
     "@types/jest": "^27.4.1",
     "deepmerge": "^4.2.2",
@@ -61,9 +61,6 @@
     "typedoc": "^0.24.8",
     "typedoc-plugin-missing-exports": "^2.0.0",
     "typescript": "~5.3.3"
-  },
-  "peerDependencies": {
-    "@metamask/messenger": "^0.3.0"
   },
   "engines": {
     "node": "^18.18 || >=20"
