chore: create new assets controller package (#7587)
## Explanation

This PR introduces a new `@metamask/assets-controller` package as a
placeholder for future consolidation of asset tracking functionality.

**Current state:**
Asset tracking functionality (account balances, token balances, asset
detection) is currently spread across multiple controllers in the
`@metamask/assets-controllers` package.

**Solution:**
This PR creates an empty `@metamask/assets-controller` package as a
foundation for future work to consolidate asset tracking into a single,
unified controller. The package currently exports nothing and serves as
a placeholder with TODOs indicating the intended scope:
- Account balance tracking
- Token balance tracking
- Asset detection

No functional changes are included in this PR.

## References

<!--
Are there any issues that this pull request is tied to?
Are there other links that reviewers should consult to understand these
changes better?
Are there client or consumer pull requests to adopt any breaking
changes?

For example:

* Fixes #12345
* Related to #67890
-->

## Checklist

- [x] I've updated the test suite for new or updated code as appropriate
- [x] I've updated documentation (JSDoc, Markdown, etc.) for new or
updated code as appropriate
- [x] I've communicated my changes to consumers by [updating changelogs
for packages I've
changed](https://github.com/MetaMask/core/tree/main/docs/contributing.md#updating-changelogs)
- [ ] I've introduced [breaking
changes](https://github.com/MetaMask/core/tree/main/docs/breaking-changes.md)
in this PR and have prepared draft pull requests for clients and
consumer packages to resolve them

<!-- CURSOR_SUMMARY -->
---

> [!NOTE]
> Introduces a scaffolded `@metamask/assets-controller` package (empty
controller, exports, tests, build/test/docs configs, changelog, license)
as a foundation for future asset tracking consolidation.
> 
> - Adds `packages/assets-controller` with `AssetsController` stub, unit
tests, Typ

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -15,6 +15,7 @@
     { "path": "./packages/app-metadata-controller/tsconfig.build.json" },
     { "path": "./packages/approval-controller/tsconfig.build.json" },
     { "path": "./packages/assets-controllers/tsconfig.build.json" },
+    { "path": "./packages/assets-controller/tsconfig.build.json" },
     { "path": "./packages/core-backend/tsconfig.build.json" },
     { "path": "./packages/base-controller/tsconfig.build.json" },
     { "path": "./packages/bridge-controller/tsconfig.build.json" },
