--- a/packages/network-enablement-controller/package.json
+++ b/packages/network-enablement-controller/package.json
@@ -54,6 +54,7 @@
     "@metamask/messenger": "^0.3.0",
     "@metamask/multichain-network-controller": "^3.0.1",
     "@metamask/network-controller": "^28.0.0",
+    "@metamask/slip44": "^4.3.0",
     "@metamask/transaction-controller": "^62.9.1",
     "@metamask/utils": "^11.9.0",
     "reselect": "^5.1.1"
