--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ examples/*/docs
 packages/*/coverage
 packages/*/dist
 packages/*/docs
+!packages/core-backend/docs
 scripts/coverage
 
 # yarn v3 (w/o zero-install)
@@ -35,3 +36,8 @@ scripts/coverage
 
 # typescript
 packages/*/*.tsbuildinfo
+
+# Emacs
+\#*\#
+.#*
+.~
