--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -21,6 +21,7 @@
     { "path": "./packages/bridge-controller/tsconfig.build.json" },
     { "path": "./packages/bridge-status-controller/tsconfig.build.json" },
     { "path": "./packages/build-utils/tsconfig.build.json" },
+    { "path": "./packages/connectivity-controller/tsconfig.build.json" },
     { "path": "./packages/chain-agnostic-permission/tsconfig.build.json" },
     { "path": "./packages/claims-controller/tsconfig.build.json" },
     { "path": "./packages/composable-controller/tsconfig.build.json" },
