--- a/packages/profile-metrics-controller/tsconfig.build.json
+++ b/packages/profile-metrics-controller/tsconfig.build.json
@@ -12,7 +12,8 @@
     { "path": "../../packages/keyring-controller/tsconfig.build.json" },
     { "path": "../../packages/messenger/tsconfig.build.json" },
     { "path": "../../packages/polling-controller/tsconfig.build.json" },
-    { "path": "../../packages/profile-sync-controller/tsconfig.build.json" }
+    { "path": "../../packages/profile-sync-controller/tsconfig.build.json" },
+    { "path": "../../packages/transaction-controller/tsconfig.build.json" }
   ],
   "include": ["../../types", "./src"]
 }
