feat(network-controller): connect NetworkController to ConnectivityController
- Add ConnectivityController:getState action handler requirement
- Suppress rpcEndpointUnavailable and rpcEndpointDegraded events when offline
- Update NetworkController to check connectivity status before publishing events
- Add tests for offline event suppression

--- a/packages/network-controller/tsconfig.build.json
+++ b/packages/network-controller/tsconfig.build.json
@@ -8,6 +8,7 @@
   "references": [
     { "path": "../base-controller/tsconfig.build.json" },
     { "path": "../controller-utils/tsconfig.build.json" },
+    { "path": "../connectivity-controller/tsconfig.build.json" },
     { "path": "../eth-block-tracker/tsconfig.build.json" },
     { "path": "../eth-json-rpc-middleware/tsconfig.build.json" },
     { "path": "../eth-json-rpc-provider/tsconfig.build.json" },
