--- a/packages/network-controller/tsconfig.json
+++ b/packages/network-controller/tsconfig.json
@@ -7,6 +7,7 @@
   "references": [
     { "path": "../base-controller" },
     { "path": "../controller-utils" },
+    { "path": "../connectivity-controller" },
     { "path": "../eth-block-tracker" },
     { "path": "../eth-json-rpc-middleware" },
     { "path": "../eth-json-rpc-provider" },
