--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@typescript-eslint/parser": "^8.48.0",
     "@yarnpkg/types": "^4.0.0",
     "babel-jest": "^29.7.0",
+    "comment-json": "^4.5.1",
     "depcheck": "^1.4.7",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^9.1.0",
