--- a/packages/assets-controller/package.json
+++ b/packages/assets-controller/package.json
@@ -49,7 +49,10 @@
   },
   "dependencies": {
     "@metamask/base-controller": "^9.0.0",
-    "@metamask/messenger": "^0.3.0"
+    "@metamask/messenger": "^0.3.0",
+    "@metamask/polling-controller": "^13.0.0",
+    "@metamask/safe-event-emitter": "^3.1.2",
+    "@metamask/utils": "^11.2.0"
   },
   "devDependencies": {
     "@metamask/auto-changelog": "^3.4.4",
