--- a/packages/assets-controller/tsconfig.json
+++ b/packages/assets-controller/tsconfig.json
@@ -3,6 +3,10 @@
   "compilerOptions": {
     "baseUrl": "./"
   },
-  "references": [{ "path": "../base-controller" }, { "path": "../messenger" }],
+  "references": [
+    { "path": "../base-controller" },
+    { "path": "../messenger" },
+    { "path": "../polling-controller" }
+  ],
   "include": ["../../types", "./src"]
 }
