feat: add  new `ConnectivityController` (#7623)
## Explanation

This PR introduces a new `@metamask/connectivity-controller` package
that provides a centralized way to track and manage device internet
connectivity status across MetaMask clients (extension and mobile).

**What is the current state of things and why does it need to change?**

- Have a single source of truth for connectivity state
- Share connectivity status across controllers and UI components
- Test connectivity-related functionality in isolation
- Maintain consistent behavior across platforms

**What is the solution your changes offer and how does it work?**

The `ConnectivityController` is a platform-agnostic controller that:
- Stores the current connectivity status (`online` or `offline`) in its
state
- Uses a service injection pattern where platform-specific
`ConnectivityService` implementations are injected at construction time
- Subscribes to connectivity changes from the service and automatically
updates its state
- Emits `stateChange` events when connectivity status changes, allowing
other controllers and UI components to react accordingly

The controller is designed to work with different service
implementations:
- **Mobile**: `NetInfoConnectivityService` using
`@react-native-community/netinfo`
- **Extension (same context)**: `BrowserConnectivityService` using
browser APIs

**Are there any changes whose purpose might not be obvious to those
unfamiliar with the domain?**

- The `connectivityStatus` field in state is prefixed with
"connectivity" to avoid conflicts when state is flattened in Redux
- The state is configured with `persist: false` since connectivity
status is ephemeral and should not be restored from storage

## References

Fixes: https://consensyssoftware.atlassian.net/browse/WPC-210


<!--
Add any relevant issues, related PRs, or documentation links here
-->

## Checklist

- [x] I've updated the test suite for new or updated code as appropriate
- [x] I've updated documentation (

--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -56,6 +56,9 @@
       "path": "./packages/composable-controller/tsconfig.build.json"
     },
     {
+      "path": "./packages/connectivity-controller/tsconfig.build.json"
+    },
+    {
       "path": "./packages/controller-utils/tsconfig.build.json"
     },
     {
