--- a/tsconfig.json
+++ b/tsconfig.json
@@ -57,6 +57,9 @@
       "path": "./packages/composable-controller"
     },
     {
+      "path": "./packages/connectivity-controller"
+    },
+    {
       "path": "./packages/controller-utils"
     },
     {
