--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -46,6 +46,9 @@
 ## Notifications Team
 /packages/notification-services-controller     @MetaMask/notifications
 
+## Perps Team
+/packages/perps-controller                  @MetaMask/perps
+
 ## Product Safety Team
 /packages/phishing-controller              @MetaMask/product-safety
 
@@ -150,6 +153,8 @@
 /packages/name-controller/CHANGELOG.md            @MetaMask/confirmations @MetaMask/core-platform
 /packages/notification-services-controller/package.json @MetaMask/notifications @MetaMask/core-platform
 /packages/notification-services-controller/CHANGELOG.md @MetaMask/notifications @MetaMask/core-platform
+/packages/perps-controller/package.json       @MetaMask/perps @MetaMask/core-platform
+/packages/perps-controller/CHANGELOG.md       @MetaMask/perps @MetaMask/core-platform
 /packages/phishing-controller/package.json    @MetaMask/product-safety @MetaMask/core-platform
 /packages/phishing-controller/CHANGELOG.md    @MetaMask/product-safety @MetaMask/core-platform
 /packages/ramps-controller/package.json       @MetaMask/ramp @MetaMask/core-platform
