--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -152,6 +152,9 @@
       "path": "./packages/permission-log-controller/tsconfig.build.json"
     },
     {
+      "path": "./packages/perps-controller/tsconfig.build.json"
+    },
+    {
       "path": "./packages/phishing-controller/tsconfig.build.json"
     },
     {
