--- a/packages/assets-controller/tsconfig.json
+++ b/packages/assets-controller/tsconfig.json
@@ -3,6 +3,13 @@
   "compilerOptions": {
     "baseUrl": "./"
   },
-  "references": [{ "path": "../base-controller" }, { "path": "../messenger" }],
+  "references": [
+    { "path": "../account-tree-controller" },
+    { "path": "../base-controller" },
+    { "path": "../core-backend" },
+    { "path": "../keyring-controller" },
+    { "path": "../messenger" },
+    { "path": "../network-enablement-controller" }
+  ],
   "include": ["../../types", "./src"]
 }
