--- a/packages/config-registry-controller/package.json
+++ b/packages/config-registry-controller/package.json
@@ -51,9 +51,9 @@
     "@metamask/base-controller": "^9.0.0",
     "@metamask/controller-utils": "^11.16.0",
     "@metamask/messenger": "^0.3.0",
-    "@metamask/network-controller": "workspace:*",
+    "@metamask/network-controller": "^29.0.0",
     "@metamask/polling-controller": "^16.0.0",
-    "@metamask/remote-feature-flag-controller": "workspace:*"
+    "@metamask/remote-feature-flag-controller": "^4.0.0"
   },
   "devDependencies": {
     "@lavamoat/allow-scripts": "^3.0.4",
