--- a/packages/connectivity-controller/package.json
+++ b/packages/connectivity-controller/package.json
@@ -49,7 +49,8 @@
   },
   "dependencies": {
     "@metamask/base-controller": "^9.0.0",
-    "@metamask/messenger": "^0.3.0"
+    "@metamask/messenger": "^0.3.0",
+    "reselect": "^5.1.1"
   },
   "devDependencies": {
     "@metamask/auto-changelog": "^3.4.4",
