feat: introduces the new home for the ai controllers (#7693)
## Explanation

This PR adds a new package `@metamask/ai-controllers` to serve as the
home for AI related controllers.
Subsequent PRs will add the actual controllers implementations.


- Added team-social-ai as the owner in teams.json
- Updated .github/CODEOWNERS

## References

<!--
Are there any issues that this pull request is tied to?
Are there other links that reviewers should consult to understand these
changes better?
Are there client or consumer pull requests to adopt any breaking
changes?

For example:

* Fixes #12345
* Related to #67890
-->

## Checklist

- [ ] I've updated the test suite for new or updated code as appropriate
- [ ] I've updated documentation (JSDoc, Markdown, etc.) for new or
updated code as appropriate
- [ ] I've communicated my changes to consumers by [updating changelogs
for packages I've
changed](https://github.com/MetaMask/core/tree/main/docs/processes/updating-changelogs.md)
- [ ] I've introduced [breaking
changes](https://github.com/MetaMask/core/tree/main/docs/processes/breaking-changes.md)
in this PR and have prepared draft pull requests for clients and
consumer packages to resolve them


<!-- CURSOR_SUMMARY -->
---

> [!NOTE]
> Establishes a new package for AI controllers and wires it into the
monorepo.
> 
> - Adds `@metamask/ai-controllers` with scaffolded code (`src/index.ts`
`greeter`), tests, build/docs configs (`package.json`, `jest.config.js`,
`tsconfig*`, `typedoc.json`), `README.md`, `LICENSE`, and `CHANGELOG.md`
> - Updates monorepo metadata: includes package in `README.md` (list and
graph), `tsconfig.json` and `tsconfig.build.json` references,
`yarn.lock` workspace entry
> - Sets ownership and release mappings: `CODEOWNERS` (Social AI team)
and `teams.json`, plus package release file ownership entries
> 
> <sup>Written by [Cursor
Bugbot](https://cursor.com/dashboard?tab=bugbot) for commit
cea2574e4dc9f8c1169f495cb2148a0774436031. This will update automaticall

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -40,6 +40,9 @@
 ## Earn Team
 /packages/earn-controller                   @MetaMask/earn
 
+## Social AI Team
+/packages/ai-controllers                    @MetaMask/social-ai
+
 ## Ramp Team
 /packages/ramps-controller                  @MetaMask/ramp
 
@@ -199,3 +202,5 @@
 /packages/core-backend/CHANGELOG.md           @MetaMask/core-platform @MetaMask/metamask-assets
 /packages/claims-controller/package.json @MetaMask/web3auth @MetaMask/core-platform
 /packages/claims-controller/CHANGELOG.md @MetaMask/web3auth @MetaMask/core-platform
+/packages/ai-controllers/package.json @MetaMask/social-ai @MetaMask/core-platform
+/packages/ai-controllers/CHANGELOG.md @MetaMask/social-ai @MetaMask/core-platform
