--- a/packages/config-registry-controller/package.json
+++ b/packages/config-registry-controller/package.json
@@ -53,7 +53,8 @@
     "@metamask/messenger": "^0.3.0",
     "@metamask/network-controller": "^29.0.0",
     "@metamask/polling-controller": "^16.0.2",
-    "@metamask/remote-feature-flag-controller": "^4.0.0"
+    "@metamask/remote-feature-flag-controller": "^4.0.0",
+    "@metamask/utils": "^11.9.0"
   },
   "devDependencies": {
     "@lavamoat/allow-scripts": "^3.0.4",
