--- a/packages/config-registry-controller/tsconfig.build.json
+++ b/packages/config-registry-controller/tsconfig.build.json
@@ -8,6 +8,7 @@
   "references": [
     { "path": "../base-controller/tsconfig.build.json" },
     { "path": "../controller-utils/tsconfig.build.json" },
+    { "path": "../keyring-controller/tsconfig.build.json" },
     { "path": "../messenger/tsconfig.build.json" },
     { "path": "../network-controller/tsconfig.build.json" },
     { "path": "../polling-controller/tsconfig.build.json" },
