--- a/packages/config-registry-controller/tsconfig.json
+++ b/packages/config-registry-controller/tsconfig.json
@@ -6,6 +6,7 @@
   "references": [
     { "path": "../base-controller" },
     { "path": "../controller-utils" },
+    { "path": "../keyring-controller" },
     { "path": "../messenger" },
     { "path": "../network-controller" },
     { "path": "../polling-controller" },
