--- a/packages/config-registry-controller/tsconfig.build.json
+++ b/packages/config-registry-controller/tsconfig.build.json
@@ -12,6 +12,7 @@
     { "path": "../messenger/tsconfig.build.json" },
     { "path": "../network-controller/tsconfig.build.json" },
     { "path": "../polling-controller/tsconfig.build.json" },
+    { "path": "../profile-sync-controller/tsconfig.build.json" },
     { "path": "../remote-feature-flag-controller/tsconfig.build.json" }
   ],
   "include": ["../../types", "./src"]
