Implement example ConfigRegistryController based on prompt
This commit is designed to test `AGENTS.md`. To do so, I generated a
controller package based on the following prompt:

~~~
Hello, I'd like to create a new package that holds a new controller and service. The package should be called `@metamask/config-registry-controller` and should be located in `config-registry-controller`.

The service should be called ConfigRegistryApiService. It should represent requests to the API `https://client-config.${env}.cx.metamask.io/`. The service constructor should accept an `env` option (`dev-api`, `uat-api`, `api`) that should be used to construct the base URL.

The service should have a single method called `fetchConfig` that should make a request to `/v1/config/networks`. This method should expect a response in the form:

{
  data: {
    version: string;
    timestamp: number;
    networks: {
      chainId: string;
      name: string;
      nativeCurrency: string;
      rpcEndpoints: {
        url: string;
        type: string;
        networkClientId: string;
        failoverUrls: string[]
      };
      blockExplorerUrls: string[];
      defaultRpcEndpointIndex: number;
      defaultBlockExplorerUrlIndex: number;
      lastUpdatedAt?: number;
      networkImageUrl?: string;
      nativeTokenImageUrl?: string;
      isActive: boolean;
      isTestnet: boolean;
      isDefault: boolean;
      isFeatured: boolean;
      isDeprecated: boolean;
      priority: number;
      isDeletable: boolean;
    }[]
  }
}

The method should support HTTP caching, i.e., if the HTTP status is 304 then a cached response should be return instead; otherwise the server's response should be returned (and the cache should be updated).

If the response does not match this format, then an error should be thrown.

The controller should be called ConfigRegistryController. It should have state that is of type:

{
  configs: {
    networks: Record<
      string,
      {
        key: string;
        val

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -60,6 +60,9 @@
       "path": "./packages/composable-controller"
     },
     {
+      "path": "./packages/config-registry-controller"
+    },
+    {
       "path": "./packages/connectivity-controller"
     },
     {
