--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -59,6 +59,9 @@
       "path": "./packages/composable-controller/tsconfig.build.json"
     },
     {
+      "path": "./packages/config-registry-controller/tsconfig.build.json"
+    },
+    {
       "path": "./packages/connectivity-controller/tsconfig.build.json"
     },
     {
