feat(perps-controller): migrate PerpsController from MetaMask Mobile
Complete migration of PerpsController implementation from MetaMask Mobile
to enable cross-platform sharing of Perps (Perpetual Futures) functionality.

This includes:
- PerpsController (~3,000 lines) with full trading functionality
- 8 state selectors for UI integration
- Comprehensive TypeScript type definitions
- 18 utility modules for calculations, formatting, validation
- 8 service modules (Trading, MarketData, Eligibility, etc.)
- HyperLiquidProvider with full protocol integration
- AggregatedPerpsProvider for multi-provider support
- Platform services for HyperLiquid client, subscriptions, wallet
- Test infrastructure with mocks and 40 unit tests

The package uses dependency injection via PerpsPlatformDependencies
interface to remain platform-agnostic, allowing Mobile and Extension
to provide their own implementations while sharing core business logic.

--- a/packages/perps-controller/tsconfig.build.json
+++ b/packages/perps-controller/tsconfig.build.json
@@ -14,6 +14,18 @@
     },
     {
       "path": "../messenger/tsconfig.build.json"
+    },
+    {
+      "path": "../network-controller/tsconfig.build.json"
+    },
+    {
+      "path": "../profile-sync-controller/tsconfig.build.json"
+    },
+    {
+      "path": "../remote-feature-flag-controller/tsconfig.build.json"
+    },
+    {
+      "path": "../transaction-controller/tsconfig.build.json"
     }
   ],
   "include": ["../../types", "./src"]
