--- a/packages/perps-controller/package.json
+++ b/packages/perps-controller/package.json
@@ -51,12 +51,27 @@
     "@metamask/base-controller": "^9.0.0",
     "@metamask/controller-utils": "^11.18.0",
     "@metamask/messenger": "^0.3.0",
-    "@metamask/utils": "^11.9.0"
+    "@metamask/utils": "^11.9.0",
+    "@nktkas/hyperliquid": "^0.30.2",
+    "bignumber.js": "^9.1.2",
+    "reselect": "^5.1.1",
+    "uuid": "^8.3.2"
+  },
+  "peerDependencies": {
+    "@metamask/network-controller": "^29.0.0",
+    "@metamask/profile-sync-controller": "^27.0.0",
+    "@metamask/remote-feature-flag-controller": "^4.0.0",
+    "@metamask/transaction-controller": "^62.9.2"
   },
   "devDependencies": {
+    "@metamask/network-controller": "^29.0.0",
+    "@metamask/profile-sync-controller": "^27.0.0",
+    "@metamask/remote-feature-flag-controller": "^4.0.0",
+    "@metamask/transaction-controller": "^62.9.2",
     "@metamask/auto-changelog": "^3.4.4",
     "@ts-bridge/cli": "^0.6.4",
     "@types/jest": "^27.4.1",
+    "@types/uuid": "^8.3.4",
     "deepmerge": "^4.2.2",
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
