--- a/packages/assets-controller/package.json
+++ b/packages/assets-controller/package.json
@@ -54,12 +54,17 @@
     "@metamask/base-controller": "^9.0.0",
     "@metamask/controller-utils": "^11.18.0",
     "@metamask/core-backend": "^5.0.0",
+    "@metamask/keyring-api": "^21.0.0",
     "@metamask/keyring-controller": "^25.1.0",
     "@metamask/keyring-internal-api": "^9.0.0",
+    "@metamask/keyring-snap-client": "^8.0.0",
     "@metamask/messenger": "^0.3.0",
     "@metamask/network-controller": "^29.0.0",
     "@metamask/network-enablement-controller": "^4.1.0",
+    "@metamask/permission-controller": "^12.2.0",
     "@metamask/polling-controller": "^16.0.2",
+    "@metamask/snaps-controllers": "^17.2.0",
+    "@metamask/snaps-utils": "^11.7.0",
     "@metamask/utils": "^11.9.0",
     "async-mutex": "^0.5.0",
     "bignumber.js": "^9.1.2",
