--- a/packages/assets-controller/tsconfig.build.json
+++ b/packages/assets-controller/tsconfig.build.json
@@ -11,7 +11,8 @@
     { "path": "../core-backend/tsconfig.build.json" },
     { "path": "../keyring-controller/tsconfig.build.json" },
     { "path": "../messenger/tsconfig.build.json" },
-    { "path": "../network-enablement-controller/tsconfig.build.json" }
+    { "path": "../network-enablement-controller/tsconfig.build.json" },
+    { "path": "../permission-controller/tsconfig.build.json" }
   ],
   "include": ["../../types", "./src"],
   "exclude": ["**/*.test.ts", "**/__fixtures__/"]
