Feat: new analytics data regulation controller (#7643)
## Explanation

This PR introduces a new
`@metamask/analytics-data-regulation-controller` package that provides
GDPR/CCPA data deletion functionality for analytics data. The package
allows to extract the logic from the mobile app (and will be compatible
with extension too)

**Current state:** MetaMask mobile app currently has a dedicated
mechanism to handle user data deletion requests for analytics data in
compliance with GDPR and CCPA regulations.

**Solution:** This package introduces:
- **AnalyticsDataRegulationController**: A controller that manages the
lifecycle of data deletion requests, tracks whether new data has been
recorded since the last deletion request, and stores deletion regulation
metadata (ID and timestamp)
- **AnalyticsDataRegulationService**: A service that communicates with
Segment's Regulations API via a proxy endpoint to create deletion tasks
and check their status
- **State management**: Tracks `hasCollectedDataSinceDeletionRequest`
flag, `deleteRegulationId`, and `deleteRegulationTimestamp` to support
compliance workflows
- **Selectors**: Provides reusable selectors for accessing controller
state

**Implementation details:**
- The controller takes `analyticsId` as a constructor parameter
(provided by the consumer)
- It delegates to `AnalyticsDataRegulationService` via messenger actions
to make HTTP requests to Segment's Regulations API
- The service uses `createServicePolicy` from
`@metamask/controller-utils` for retry logic and error handling
- State is persisted and can be used to determine if new analytics
events have been recorded since the last deletion request
- The package includes comprehensive test coverage (100% branch,
function, line, and statement coverage)

## References

see also https://github.com/MetaMask/metamask-mobile/issues/22016

Fixes https://github.com/MetaMask/core/issues/7618

## Checklist

- [x] I've updated the test suite for new or updated code as appropriate


--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,9 @@
       "path": "./packages/analytics-controller"
     },
     {
+      "path": "./packages/analytics-data-regulation-controller"
+    },
+    {
       "path": "./packages/announcement-controller"
     },
     {
