--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -23,6 +23,9 @@
       "path": "./packages/analytics-controller/tsconfig.build.json"
     },
     {
+      "path": "./packages/analytics-data-regulation-controller/tsconfig.build.json"
+    },
+    {
       "path": "./packages/announcement-controller/tsconfig.build.json"
     },
     {
