--- a/package.json
+++ b/package.json
@@ -66,10 +66,11 @@
     "@metamask/network-controller": "^29.0.0",
     "@metamask/utils": "^11.9.0",
     "@ts-bridge/cli": "^0.6.4",
-    "@types/jest": "^27.4.1",
+    "@types/jest": "^28.1.8",
     "@types/lodash": "^4.14.191",
     "@types/node": "^16.18.54",
     "@types/semver": "^7",
+    "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^8.48.0",
     "@typescript-eslint/parser": "^8.48.0",
     "@yarnpkg/types": "^4.0.0",
@@ -87,7 +88,8 @@
     "eslint-plugin-promise": "^7.1.0",
     "execa": "^5.0.0",
     "isomorphic-fetch": "^3.0.0",
-    "jest": "^27.5.1",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "jest-silent-reporter": "^0.5.0",
     "lodash": "^4.17.21",
     "nock": "^13.3.1",
@@ -100,6 +102,8 @@
     "tsx": "^4.20.5",
     "typescript": "~5.3.3",
     "typescript-eslint": "^8.48.0",
+    "uuid": "^8.3.2",
+    "yaml": "^2.3.4",
     "yargs": "^17.7.2"
   },
   "packageManager": "yarn@4.10.3",
