feat: adds ai digest controller (#7746)
## Explanation

Adds AiDigestController to the @metamask/ai-controllers package for
fetching and caching AI-generated asset digests.

What it does:
- AiDigestService - Fetches digest data from GET
/digests/assets/:assetId/latest
- AiDigestController - Manages state, caching (10 min TTL, 50 entry
max), and FIFO eviction
- Follows existing controller patterns (BaseController, messenger
actions, etc.)

Design decisions:
- DigestData type mirrors the API response structure from
va-mmcx-digest-api - we'll iterate inline as the API evolves
- baseUrl is required (no default) - consuming apps must provide their
API endpoint
- Eviction handles stale entries, error/loading states, and invalid
entries from corrupted persistence

This is a V1 implementation - the API response shape may evolve as the
backend is finalized.

## References

## Checklist

- [x] I've updated the test suite for new or updated code as appropriate
- [ ] I've updated documentation (JSDoc, Markdown, etc.) for new or
updated code as appropriate
- [ ] I've communicated my changes to consumers by [updating changelogs
for packages I've
changed](https://github.com/MetaMask/core/tree/main/docs/processes/updating-changelogs.md)
- [ ] I've introduced [breaking
changes](https://github.com/MetaMask/core/tree/main/docs/processes/breaking-changes.md)
in this PR and have prepared draft pull requests for clients and
consumer packages to resolve them


<!-- CURSOR_SUMMARY -->
---

> [!NOTE]
> **Medium Risk**
> Adds new persisted controller state and a network-backed fetch flow;
correctness of TTL/FIFO eviction and API error handling affects UI
behavior and storage growth, but does not touch auth or funds.
> 
> **Overview**
> Adds a new `AiDigestController` that fetches asset digests via an
injected `DigestService`, persists them in controller state, and exposes
messenger actions for `fetchDigest`, `clearDigest`, and
`clearAllDigests`.
> 
> Implements caching with a 10-minute TTL (

--- a/packages/ai-controllers/tsconfig.json
+++ b/packages/ai-controllers/tsconfig.json
@@ -3,6 +3,6 @@
   "compilerOptions": {
     "baseUrl": "./"
   },
-  "references": [],
+  "references": [{ "path": "../base-controller" }, { "path": "../messenger" }],
   "include": ["../../types", "./src"]
 }
