--- a/packages/config-registry-controller/tsconfig.build.json
+++ b/packages/config-registry-controller/tsconfig.build.json
@@ -5,6 +5,7 @@
     "outDir": "./dist",
     "rootDir": "./src"
   },
+  "exclude": ["**/*.test.ts", "./src/test-helpers.ts"],
   "references": [
     { "path": "../base-controller/tsconfig.build.json" },
     { "path": "../controller-utils/tsconfig.build.json" },
