--- a/packages/core-backend/package.json
+++ b/packages/core-backend/package.json
@@ -63,6 +63,7 @@
     "@types/jest": "^28.0.0",
     "deepmerge": "^4.2.2",
     "jest": "^28.0.0",
+    "jest-environment-jsdom": "^29.0.0",
     "sinon": "^9.2.4",
     "ts-jest": "^28.0.0",
     "typedoc": "^0.24.8",
