--- a/packages/network-controller/package.json
+++ b/packages/network-controller/package.json
@@ -82,6 +82,7 @@
     "deep-freeze-strict": "^1.1.1",
     "deepmerge": "^4.2.2",
     "jest": "^28.0.0",
+    "jest-environment-jsdom": "^29.0.0",
     "jest-when": "^3.4.2",
     "lodash": "^4.17.21",
     "nock": "^13.3.1",
