--- a/packages/selected-network-controller/package.json
+++ b/packages/selected-network-controller/package.json
@@ -63,6 +63,7 @@
     "deepmerge": "^4.2.2",
     "immer": "^9.0.6",
     "jest": "^28.0.0",
+    "jest-environment-jsdom": "^29.0.0",
     "lodash": "^4.17.21",
     "nock": "^13.3.1",
     "sinon": "^9.2.4",
