--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "tsx": "^4.20.5",
     "typescript": "~5.3.3",
     "typescript-eslint": "^8.48.0",
+    "uuid": "^8.3.2",
     "yargs": "^17.7.2"
   },
   "packageManager": "yarn@4.10.3",
