--- a/.depcheckrc.yml
+++ b/.depcheckrc.yml
@@ -26,6 +26,7 @@ ignores:
   - 'typescript-eslint'
   # Jest environment referenced in `jest.config.scripts.js`
   - 'jest-environment-node'
+  - 'jest-environment-jsdom'
   # Ignore dependencies imported implicitly by tools
   - 'eslint-import-resolver-typescript'
   # Ignore dependencies which plug into the NPM lifecycle
