perf: optimize ESLint for large monorepo
Disable expensive rules that provide limited value:
- prettier/prettier (~30% savings) - Prettier runs separately via lint:misc
- import-x/namespace (~22% savings) - Very expensive with limited benefit

Add NODE_OPTIONS=--max-semi-space-size=256 to CI lint step as recommended
by typescript-eslint for better memory management.

See: https://typescript-eslint.io/troubleshooting/typed-linting/performance

--- a/.github/workflows/lint-build-test.yml
+++ b/.github/workflows/lint-build-test.yml
@@ -39,6 +39,10 @@ jobs:
           is-high-risk-environment: false
           node-version: ${{ matrix.node-version }}
       - run: yarn lint
+        env:
+          # Optimize Node.js memory for ESLint performance in large monorepos
+          # See: https://typescript-eslint.io/troubleshooting/typed-linting/performance
+          NODE_OPTIONS: '--max-semi-space-size=256'
       - name: Require clean working directory
         shell: bash
         run: |
