--- a/packages/config-registry-controller/package.json
+++ b/packages/config-registry-controller/package.json
@@ -51,12 +51,12 @@
     "@metamask/base-controller": "^9.0.0",
     "@metamask/controller-utils": "^11.18.0",
     "@metamask/messenger": "^0.3.0",
-    "@metamask/network-controller": "^29.0.0",
     "@metamask/polling-controller": "^16.0.2",
     "@metamask/profile-sync-controller": "^27.0.0",
     "@metamask/remote-feature-flag-controller": "^4.0.0",
     "@metamask/superstruct": "^3.1.0",
-    "@metamask/utils": "^11.9.0"
+    "@metamask/utils": "^11.9.0",
+    "reselect": "^5.1.1"
   },
   "devDependencies": {
     "@lavamoat/allow-scripts": "^3.0.4",
