--- a/packages/assets-controller/package.json
+++ b/packages/assets-controller/package.json
@@ -68,8 +68,7 @@
     "@metamask/utils": "^11.9.0",
     "async-mutex": "^0.5.0",
     "bignumber.js": "^9.1.2",
-    "lodash": "^4.17.21",
-    "viem": "^2.44.4"
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@metamask/auto-changelog": "^3.4.4",
