--- a/packages/assets-controller/package.json
+++ b/packages/assets-controller/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "@ethereumjs/util": "^9.1.0",
+    "@ethersproject/abi": "^5.7.0",
     "@ethersproject/providers": "^5.7.0",
     "@metamask/account-tree-controller": "^4.0.0",
     "@metamask/base-controller": "^9.0.0",
