--- a/packages/bridge-controller/tsconfig.json
+++ b/packages/bridge-controller/tsconfig.json
@@ -16,5 +16,5 @@
     { "path": "../multichain-network-controller" },
     { "path": "../remote-feature-flag-controller" }
   ],
-  "include": ["../../types", "./src", "./tests"]
+  "include": ["../../types", "./src", "./tests", "openapi-ts.config.ts"]
 }
