--- a/packages/client-state-controller/tsconfig.build.json
+++ b/packages/client-state-controller/tsconfig.build.json
@@ -1,1 +1,13 @@
-{"extends":"../../tsconfig.packages.build.json","compilerOptions":{"baseUrl":"./","outDir":"./dist","rootDir":"./src"},"references":[{"path":"../base-controller/tsconfig.build.json"},{"path":"../messenger/tsconfig.build.json"}],"include":["../../types","./src"]}
+{
+  "extends": "../../tsconfig.packages.build.json",
+  "compilerOptions": {
+    "baseUrl": "./",
+    "outDir": "./dist",
+    "rootDir": "./src"
+  },
+  "references": [
+    { "path": "../base-controller/tsconfig.build.json" },
+    { "path": "../messenger/tsconfig.build.json" }
+  ],
+  "include": ["../../types", "./src"]
+}
