--- a/packages/client-state-controller/tsconfig.json
+++ b/packages/client-state-controller/tsconfig.json
@@ -1,1 +1,5 @@
-{"extends":"../../tsconfig.packages.json","compilerOptions":{"baseUrl":"."},"include":["src"]}
+{
+  "extends": "../../tsconfig.packages.json",
+  "compilerOptions": { "baseUrl": "." },
+  "include": ["src"]
+}
