--- a/packages/assets-controller/package.json
+++ b/packages/assets-controller/package.json
@@ -54,7 +54,7 @@
     "@metamask/account-tree-controller": "^4.0.0",
     "@metamask/base-controller": "^9.0.0",
     "@metamask/controller-utils": "^11.18.0",
-    "@metamask/core-backend": "^5.1.0",
+    "@metamask/core-backend": "5.0.0",
     "@metamask/keyring-api": "^21.0.0",
     "@metamask/keyring-controller": "^25.1.0",
     "@metamask/keyring-internal-api": "^9.0.0",
