--- a/packages/assets-controllers/package.json
+++ b/packages/assets-controllers/package.json
@@ -61,7 +61,7 @@
     "@metamask/base-controller": "^9.0.0",
     "@metamask/contract-metadata": "^2.4.0",
     "@metamask/controller-utils": "^11.18.0",
-    "@metamask/core-backend": "^5.1.0",
+    "@metamask/core-backend": "5.0.0",
     "@metamask/eth-query": "^4.0.0",
     "@metamask/keyring-api": "^21.0.0",
     "@metamask/keyring-controller": "^25.1.0",
