--- a/packages/transaction-controller/package.json
+++ b/packages/transaction-controller/package.json
@@ -59,7 +59,7 @@
     "@metamask/approval-controller": "^8.0.0",
     "@metamask/base-controller": "^9.0.0",
     "@metamask/controller-utils": "^11.18.0",
-    "@metamask/core-backend": "^5.1.0",
+    "@metamask/core-backend": "5.0.0",
     "@metamask/eth-query": "^4.0.0",
     "@metamask/gas-fee-controller": "^26.0.2",
     "@metamask/messenger": "^0.3.0",
