--- a/packages/config-registry-controller/package.json
+++ b/packages/config-registry-controller/package.json
@@ -55,7 +55,8 @@
     "@metamask/profile-sync-controller": "^27.0.0",
     "@metamask/remote-feature-flag-controller": "^4.0.0",
     "@metamask/superstruct": "^3.1.0",
-    "@metamask/utils": "^11.9.0"
+    "@metamask/utils": "^11.9.0",
+    "reselect": "^5.1.1"
   },
   "devDependencies": {
     "@lavamoat/allow-scripts": "^3.0.4",
