--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -2,6 +2,8 @@ compressionLevel: mixed
 
 enableGlobalCache: false
 
+enableImmutableInstalls: true
+
 enableScripts: false
 
 enableTelemetry: false
@@ -12,18 +14,14 @@ logFilters:
 
 nodeLinker: node-modules
 
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-allow-scripts.cjs
-    spec: "https://raw.githubusercontent.com/LavaMoat/LavaMoat/main/packages/yarn-plugin-allow-scripts/bundles/@yarnpkg/plugin-allow-scripts.js"
+npmMinimalAgeGate: 4320
 
-# Configure the NPM minimal age gate to 3 days, meaning packages must be at
-# least 3 days old to be installed.
-npmMinimalAgeGate: 4320 # 3 days (in minutes)
-
-# Override the minimal age gate, allowing certain packages to be installed
-# regardless of their publish age.
 npmPreapprovedPackages:
   - "@metamask/*"
   - "@metamask-previews/*"
   - "@lavamoat/*"
   - "@ts-bridge/*"
+
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-allow-scripts.cjs
+    spec: "https://raw.githubusercontent.com/LavaMoat/LavaMoat/main/packages/yarn-plugin-allow-scripts/bundles/@yarnpkg/plugin-allow-scripts.js"
